--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
             </option>
           </select>
         </div>
-        <div class="estilo_botao"></div>
+        <div class="estilo_botao">
+          <label for="dim_final">Dimensão Final (L x A)</label>
+          <input type="number" name="dim_final" placeholder="---">
+        </div>
         <div class="estilo_botao"></div>
         <div class="estilo_botao"></div>
         <div class="estilo_botao"></div>
