estilo_botao atualizado

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="estilo_botao">
           <label for="dim_final">Dimensão Final (L x A)</label>
-          <input type="number" name="dim_final" placeholder="---">
+          <input type="text" name="dim_final" placeholder="---">
         </div>
         <div class="estilo_botao"></div>
         <div class="estilo_botao"></div>
