botoes nav_bar atualiados

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
       <div class="nav_bar">
 
         <div class="tipo_impressao">
+
           <label for="slct_tipo_impressao" id="label_slct_tipo_impressao">IMPRESSÃO</label>
           <select name="slct_tipo_impressao" id="slct_tipo_impressao">
+
             <option value="uv">UV
             </option>
             <option value="adesio">ADESIVO
@@ -25,22 +27,49 @@
             </option>
             <option value="lona">LONA
             </option>
+
           </select>
         </div>
-        <div class="estilo_botao">
+        <div class="estilo_botao d_final">
           <label for="dim_final">Dimensão Final (L x A)</label>
           <input type="text" name="dim_final" placeholder="---">
         </div>
-        <div class="estilo_botao"></div>
-        <div class="estilo_botao"></div>
-        <div class="estilo_botao"></div>
-        <div class="estilo_botao"></div>
-        <div class="estilo_botao"></div>
-        <div class="estilo_botao"></div>
-        <div class="estilo_botao"></div>
-        <div class="estilo_botao"></div>
-        <div class="info_adicinal"></div>
-
+        <div class="estilo_botao">
+          <label for="dim_final">Sangra Total (L x A)</label>
+          <input type="text" name="dim_final" placeholder="---">
+        </div>
+        <div class="estilo_botao">
+          <label for="dim_final">Material</label>
+          <input type="text" name="dim_final" placeholder="---">
+        </div>
+        <div class="estilo_botao">
+          <label for="dim_final">Quantidade</label>
+          <input type="text" name="dim_final" placeholder="---">
+          </div>
+          <div class="estilo_botao">
+            <label for="dim_final">Impressão</label>
+            <input type="text" name="dim_final" placeholder="---">
+          </div>
+          <div class="estilo_botao">
+            <label for="dim_final">Cores</label>
+            <input type="text" name="dim_final" placeholder="---">
+          </div>
+          <div class="estilo_botao">
+            <label for="dim_final">Calço</label>
+            <input type="text" name="dim_final" placeholder="---">
+          </div>
+          <div class="estilo_botao">
+            <label for="dim_final">Corte</label>
+            <input type="text" name="dim_final" placeholder="---">
+          </div>
+          <div class="estilo_botao">
+            <label for="dim_final">Acabamento</label>
+          <input type="text" name="dim_final" placeholder="---">
+        </div>
+        <div class="estilo_botao info_adicional">
+          <label for="info_adicional">Inf. adicionais</label>
+          <textarea name="info_adicional" id="input_info_adicional" placeholder="---"></textarea>
+        </div>
       </div>
 
       <div class="nmr_OS">
