backgroud alterado dinamicamente com JS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <option value="uv">UV
             </option>
-            <option value="adesio">ADESIVO
+            <option value="adesivo">ADESIVO
             </option>
             <option value="recorte">RECORTE</option>
             <option value="tecido">TECIDO
