--- a/index.html
+++ b/index.html
@@ -30,46 +30,49 @@
 
           </select>
         </div>
+
         <div class="estilo_botao d_final">
           <label for="dim_final">Dimensão Final (L x A)</label>
           <input type="text" name="dim_final" placeholder="---">
         </div>
-        <div class="estilo_botao">
-          <label for="dim_final">Sangra Total (L x A)</label>
-          <input type="text" name="dim_final" placeholder="---">
+<div class="estilo_botao sangra">
+  <label for="sangra">Sangra Total (L x A)</label>
+  <input type="text" name="sangra" placeholder="---">
         </div>
-        <div class="estilo_botao">
-          <label for="dim_final">Material</label>
-          <input type="text" name="dim_final" placeholder="---">
+<div class="estilo_botao material">
+  <label for="material">Material</label>
+  <input type="text" name="material" placeholder="---">
         </div>
-        <div class="estilo_botao">
-          <label for="dim_final">Quantidade</label>
-          <input type="text" name="dim_final" placeholder="---">
+<div class="estilo_botao quantidade">
+  <label for="quantidade">Quantidade</label>
+  <input type="text" name="quantidade" placeholder="---">
           </div>
-          <div class="estilo_botao">
-            <label for="dim_final">Impressão</label>
-            <input type="text" name="dim_final" placeholder="---">
+<div class="estilo_botao impressao">
+  <label for="impressao">Impressão</label>
+  <input type="text" name="impressao" placeholder="---">
           </div>
-          <div class="estilo_botao">
-            <label for="dim_final">Cores</label>
-            <input type="text" name="dim_final" placeholder="---">
+<div class="estilo_botao cores">
+  <label for="cores">Cores</label>
+  <input type="text" name="cores" placeholder="---">
           </div>
-          <div class="estilo_botao">
-            <label for="dim_final">Calço</label>
-            <input type="text" name="dim_final" placeholder="---">
+<div class="estilo_botao calco">
+  <label for="calco">Calço</label>
+  <input type="text" name="calco" placeholder="---">
           </div>
-          <div class="estilo_botao">
-            <label for="dim_final">Corte</label>
-            <input type="text" name="dim_final" placeholder="---">
+<div class="estilo_botao corte">
+  <label for="corte">Corte</label>
+  <input type="text" name="corte" placeholder="---">
           </div>
-          <div class="estilo_botao">
-            <label for="dim_final">Acabamento</label>
-          <input type="text" name="dim_final" placeholder="---">
+<div class="estilo_botao acabamento">
+  <label for="acabamento">Acabamento</label>
+  <input type="text" name="acabamento" placeholder="---">
         </div>
+
         <div class="estilo_botao info_adicional">
           <label for="info_adicional">Inf. adicionais</label>
           <textarea name="info_adicional" id="input_info_adicional" placeholder="---"></textarea>
         </div>
+
       </div>
 
       <div class="nmr_OS">
