--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div class="estilo_botao info_adicional">
           <label for="info_adicional">Inf. adicionais</label>
-          <textarea name="info_adicional" id="input_info_adicional" placeholder="---"></textarea>
+          <textarea name="info_adicional" id="input_info_adicional" placeholder="teste"></textarea>
         </div>
 
       </div>
