criado select x_cada_un para input quantidade

--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
                     </div>
                     <div class="estilo_botao quantidade">
                         <label for="quantidade">Quantidade</label>
-                        <input type="text" name="quantidade" placeholder="---" />
+                        <div class="grupo_quantidade">
+                            <input type="text" name="quantidade" placeholder="---" />
+                            <select name="x_cada_un" id="x_cada_un">
+                                <option value="un">un.</option>
+                                <option value="x_cada">x de cada</option>
+                            </select>
+                            </div>
                     </div>
                     <div class="estilo_botao impressao">
                         <label for="impressao">Impressão</label>
