--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
           </div>
           <div class="estilo_botao quantidade">
             <label for="quantidade">Quantidade</label>
-            <input type="text" name="quantidade" placeholder="---" />
+
+            <div class="grupo_quantidade">
+              <input type="text" name="quantidade" placeholder="---" />
+              <select name="slct_quantidade" id="slct_quantidade">
+                <option value="un">un.</option>
+                <option value="x_cada">x de cada</option>
+              </select>
+            </div>
           </div>
           <div class="estilo_botao impressao">
             <label for="impressao">Impressão</label>
