--- a/index.html
+++ b/index.html
@@ -147,11 +147,39 @@
       <div class="nav_bar_dir"></div>
     </form>
 
-    <div class="upload_image">
-      <label for="upload_input">Carregar Imagem:</label>
-      <input type="file" id="upload_input" accept="image/*" />
+    <!-- Input para upload de PDFs -->
+    <div class="upload_pdf">
+      <label for="upload_pdf">Carregar PDF:</label>
+      <input type="file" id="upload_pdf" accept="application/pdf" />
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
+
+    <div id="pdf-render"></div>
+    <script>
+      const uploadPdfInput = document.getElementById("upload_pdf");
+      const pdfRender = document.getElementById("pdf-render");
+
+      uploadPdfInput.addEventListener("change", async (event) => {
+        const file = event.target.files[0];
+        if (file) {
+          const pdfURL = URL.createObjectURL(file);
+          const pdf = await pdfjsLib.getDocument(pdfURL).promise;
+          const page = await pdf.getPage(1); // Renderiza apenas a primeira página
+
+          const canvas = document.createElement("canvas");
+          const context = canvas.getContext("2d");
+          const viewport = page.getViewport({ scale: 1 });
+
+          canvas.height = viewport.height;
+          canvas.width = viewport.width;
+          pdfRender.innerHTML = ""; // Limpa a área
+          pdfRender.appendChild(canvas);
+
+          page.render({ canvasContext: context, viewport });
+        }
+      });
+    </script>
     <script src="./src/script.js"></script>
   </body>
 </html>
