--- a/index.html
+++ b/index.html
@@ -125,22 +125,7 @@
 
       <div class="logo"></div>
 
-      <div
-        class="layout_area_2"
-        id="layout_area"
-        style="
-          position: relative;
-          width: 800px;
-          height: 600px;
-          border: 1px solid #ccc;
-        "
-      >
-        <canvas id="pdf-canvas"></canvas>
-        <canvas
-          id="cotas-canvas"
-          style="position: absolute; top: 0; left: 0; pointer-events: none"
-        ></canvas>
-      </div>
+      <div class="layout_area_2" id="pdf-container"></div>
 
       <div class="layout_area_3"></div>
 
@@ -159,12 +144,6 @@
 
       <div class="nav_bar_dir"></div>
     </form>
-
-    <!-- Input para upload de PDFs -->
-    <div class="upload_pdf">
-      <label for="upload_pdf">Carregar PDF:</label>
-      <input type="file" id="upload_pdf" accept="application/pdf" />
-    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
     <script src="./src/script.js"></script>
