--- a/tests/teste-imgs.html
+++ b/tests/teste-imgs.html
@@ -7,21 +7,30 @@
 
     <style>
       #corpo {
+        width: 1000px;
         height: 700px;
         background-color: red;
-        .teste1 {
-          width: 70px;
-          height: 70px;
-          background-color: aqua;
+
+        overflow: hidden;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .container-img {
+          width: auto;
+          img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+            display: block;
+          }
         }
       }
     </style>
   </head>
 
   <body>
-    <div id="corpo">
-      <div id="testes"></div>
-    </div>
+    <div id="corpo"></div>
   </body>
 
   <script>
@@ -41,13 +50,16 @@
         if (arquivo) {
           const arquivoURL = URL.createObjectURL(arquivo);
 
-          let criarElemento = document.createElement("img"); //criar elementos no HTML
+          let criarElemento = document.createElement("div");
+          criarElemento.classList.add("container-img");
+          let criarImg = document.createElement("img"); //criar elementos no HTML
 
-          criarElemento.src = arquivoURL;
-          criarElemento.style.maxWidth = "100%";
-          criarElemento.style.maxHeight = "100%";
+          criarImg.src = arquivoURL;
+          // criarElemento.style.maxWidth = "100%";
+          // criarElemento.style.maxHeight = "100%";
 
           corpo.appendChild(criarElemento); //aonde o elemento vai ser criado
+          criarElemento.appendChild(criarImg);
         }
       });
       criarInput.click();
