--- a/tests/teste-imgs.html
+++ b/tests/teste-imgs.html
@@ -13,14 +13,18 @@
 
         overflow: hidden;
         position: relative;
-        display: flex;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         justify-content: center;
         align-items: center;
         .container-img {
           width: auto;
+          height: auto;
+          display: flex;
+          justify-content: center;
           img {
-            max-width: 100%;
-            max-height: 100%;
+            max-width: 80%;
+            max-height: 80%;
             object-fit: contain;
             display: block;
           }
@@ -31,7 +35,6 @@
 
   <body>
     <div id="corpo"></div>
-    <input type="file" />
   </body>
 
   <script>
