--- a/tests/teste-imgs.html
+++ b/tests/teste-imgs.html
@@ -20,13 +20,38 @@
         .container-img {
           width: auto;
           height: auto;
-          display: flex;
+          display: grid;
+          grid-template-columns: auto auto;
+          grid-template-rows: auto 1fr;
+          grid-template-areas:
+            ". largura"
+            "altura img";
           justify-content: center;
+          justify-items: center;
+          align-items: center;
+
+          #altura {
+            height: 100%;
+            /* invertendo os sentidos */
+            transform: rotate(180deg);
+            border-left: 2px solid aqua;
+            grid-area: altura;
+            writing-mode: vertical-lr;
+            text-align: center;
+          }
+          #largura {
+            width: 100%;
+            border-bottom: 2px solid yellow;
+            grid-area: largura;
+            text-align: center;
+          }
+
           img {
-            max-width: 80%;
-            max-height: 80%;
+            max-width: 100%;
+            max-height: 100%;
             object-fit: contain;
             display: block;
+            grid-area: img;
           }
         }
       }
@@ -34,7 +59,13 @@
   </head>
 
   <body>
-    <div id="corpo"></div>
+    <div id="corpo">
+      <div class="container-img">
+        <div id="altura">123456</div>
+        <div id="largura">123456</div>
+        <img src="../img/logo_showmais.png" alt="" srcset="" />
+      </div>
+    </div>
   </body>
 
   <script>
@@ -61,11 +92,14 @@
             let criarImg = document.createElement("img"); //criar elementos no HTML
 
             criarImg.src = arquivoURL;
-            // criarElemento.style.maxWidth = "100%";
-            // criarElemento.style.maxHeight = "100%";
 
             corpo.appendChild(criarElemento); //aonde o elemento vai ser criado
             criarElemento.appendChild(criarImg);
+
+            criarImg.onload = () => {
+              console.log(`largura: ${criarImg.naturalWidth}
+              altura: ${criarImg.naturalHeight}`);
+            };
           }
         }
       });
