--- a/tests/teste-imgs.html
+++ b/tests/teste-imgs.html
@@ -19,8 +19,10 @@
           position: relative;
           display: grid;
           grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+          gap: 5px;
           justify-content: center;
           align-items: center;
+
           .container-img {
             width: auto;
             height: auto;
@@ -68,10 +70,10 @@
 
   <body>
     <div id="corpo">
-      <div class="container-img">
+      <!-- <div class="container-img">
         <div class="altura">123456</div>
         <div class="largura">123456</div>
-        <img src="../img/logo_showmais.png" alt="" srcset="" />
+        <img src="../img/logo_showmais.png" alt="" srcset="" /> -->
       </div>
     </div>
   </body>
@@ -97,14 +99,23 @@
 
             let criarElemento = document.createElement("div");
             criarElemento.classList.add("container-img");
-            let criarImg = document.createElement("img"); //criar elementos no HTML
 
+            let cotaAltura = document.createElement("div"); //criar elementos no HTML
+            cotaAltura.classList.add("altura");
+            let cotaLargura = document.createElement("div");
+            cotaLargura.classList.add("largura");
+            let criarImg = document.createElement("img");
             criarImg.src = arquivoURL;
 
             corpo.appendChild(criarElemento); //aonde o elemento vai ser criado
+            criarElemento.appendChild(cotaAltura);
+            criarElemento.appendChild( cotaLargura);
             criarElemento.appendChild(criarImg);
 
             criarImg.onload = () => {
+              cotaAltura.innerText = criarImg.naturalHeight+'mm';
+              cotaLargura.innerText = criarImg.naturalWidth+'mm';
+
               console.log(`largura: ${criarImg.naturalWidth}
               altura: ${criarImg.naturalHeight}`);
             };
