--- a/tests/teste-imgs.html
+++ b/tests/teste-imgs.html
@@ -113,11 +113,17 @@
             criarElemento.appendChild(criarImg);
 
             criarImg.onload = () => {
-              cotaAltura.innerText = criarImg.naturalHeight+'mm';
-              cotaLargura.innerText = criarImg.naturalWidth+'mm';
+              const PPI=96  //Pixel por polegada (padrão por tela)
+              const polegadasParaMM=25.4  //1 polegada = 2,54cm
 
-              console.log(`largura: ${criarImg.naturalWidth}
-              altura: ${criarImg.naturalHeight}`);
+              const larguraMM=(criarImg.naturalWidth/PPI)*polegadasParaMM
+              const alturaMM=(criarImg.naturalHeight/PPI)*polegadasParaMM
+
+              cotaAltura.innerText = alturaMM.toFixed(2)+'mm';  //toFixed(n) define a quantidade de casas decimais
+              cotaLargura.innerText = larguraMM.toFixed(2)+'mm';  //toFixed(n) define a quantidade de casas decimais
+
+              console.log(`largura: ${larguraMM}
+              altura: ${alturaMM}`);
             };
           }
         }
