estilo e logica botao de excluir / comecar logica exclusao de arquivos

--- a/tests/teste-imgs.html
+++ b/tests/teste-imgs.html
@@ -86,9 +86,12 @@
                 justify-content: center;
 
                 img {
-                  height: 80%;
+                  height: 50%;
                   object-fit: contain;
                   position: absolute;
+                }
+                img:hover {
+                  cursor: pointer;
                 }
               }
             }
@@ -100,21 +103,16 @@
 
   <body>
     <div id="corpo">
-      <div class="container-img">
+      <!-- <div class="container-img">
         <div class="altura">123456</div>
         <div class="largura">123456</div>
         <div class="img-lixeira">
           <div class="lixeira">
             <img src="../img/ico_lixeira.png" alt="" srcset="" />
           </div>
-          <img
-            src="../img/logo_showmais.png"
-            alt=""
-            srcset=""
-            class="arquivo_layout"
-          />
+          <img src="../img/logo_showmais.png" class="arquivo_layout" />
         </div>
-      </div>
+      </div> -->
     </div>
   </body>
 
@@ -137,27 +135,43 @@
           if (arquivo) {
             const arquivoURL = URL.createObjectURL(arquivo);
 
-            let criarElemento = document.createElement("div");
-            criarElemento.classList.add("container-img");
+            let container_img = document.createElement("div");
+            container_img.classList.add("container-img");
+            corpo.appendChild(container_img); //aonde o elemento vai ser criado
 
             let cotaAltura = document.createElement("div"); //criar elementos no HTML
             cotaAltura.classList.add("altura");
+            container_img.appendChild(cotaAltura);
+
             let cotaLargura = document.createElement("div");
             cotaLargura.classList.add("largura");
-            let criarImg = document.createElement("img");
-            criarImg.src = arquivoURL;
+            container_img.appendChild(cotaLargura);
 
-            corpo.appendChild(criarElemento); //aonde o elemento vai ser criado
-            criarElemento.appendChild(cotaAltura);
-            criarElemento.appendChild(cotaLargura);
-            criarElemento.appendChild(criarImg);
+            let img_lixeira = document.createElement("div");
+            img_lixeira.classList.add("img-lixeira");
+            container_img.appendChild(img_lixeira);
 
-            criarImg.onload = () => {
+            let lixeira = document.createElement("div");
+            lixeira.classList.add("lixeira");
+            img_lixeira.appendChild(lixeira);
+
+            let srcLixeira = document.createElement("img");
+            srcLixeira.setAttribute("src", "../img/ico_lixeira.png");
+            lixeira.appendChild(srcLixeira);
+
+            let arquivo_layout = document.createElement("img");
+            arquivo_layout.classList.add("arquivo_layout");
+            arquivo_layout.src = arquivoURL;
+            img_lixeira.appendChild(arquivo_layout);
+
+            arquivo_layout.onload = () => {
               const PPI = 100; //Pixel por polegada (padrão por tela)
               const polegadasParaMM = 35.278; //1 polegada = 2,54cm
 
-              const larguraMM = (criarImg.naturalWidth / PPI) * polegadasParaMM;
-              const alturaMM = (criarImg.naturalHeight / PPI) * polegadasParaMM;
+              const larguraMM =
+                (arquivo_layout.naturalWidth / PPI) * polegadasParaMM;
+              const alturaMM =
+                (arquivo_layout.naturalHeight / PPI) * polegadasParaMM;
 
               cotaAltura.innerText = alturaMM.toFixed(2) + "mm"; //toFixed(n) define a quantidade de casas decimais
               cotaLargura.innerText = larguraMM.toFixed(2) + "mm"; //toFixed(n) define a quantidade de casas decimais
