--- a/tests/teste-imgs.html
+++ b/tests/teste-imgs.html
@@ -24,7 +24,7 @@
           align-items: center;
 
           .container-img {
-            width: auto;
+            width: 100%;
             height: auto;
             display: grid;
             grid-template-columns: auto auto;
