logica inserir todas paginas pdf

--- a/tests/teste-imgs.html
+++ b/tests/teste-imgs.html
@@ -142,52 +142,89 @@
         for (const arquivo of arquivos) {
           if (arquivo) {
             const arquivoURL = URL.createObjectURL(arquivo);
+            function criarEstrutura() {
+              let container_img = document.createElement("div");
+              container_img.classList.add("container-img");
+              corpo.appendChild(container_img); //aonde o elemento vai ser criado
 
-            let container_img = document.createElement("div");
-            container_img.classList.add("container-img");
-            corpo.appendChild(container_img); //aonde o elemento vai ser criado
+              let cotaAltura = document.createElement("div"); //criar elementos no HTML
+              cotaAltura.classList.add("altura");
+              container_img.appendChild(cotaAltura);
 
-            let cotaAltura = document.createElement("div"); //criar elementos no HTML
-            cotaAltura.classList.add("altura");
-            container_img.appendChild(cotaAltura);
+              let cotaLargura = document.createElement("div");
+              cotaLargura.classList.add("largura");
+              container_img.appendChild(cotaLargura);
 
-            let cotaLargura = document.createElement("div");
-            cotaLargura.classList.add("largura");
-            container_img.appendChild(cotaLargura);
+              let img_lixeira = document.createElement("div");
+              img_lixeira.classList.add("img-lixeira");
+              container_img.appendChild(img_lixeira);
 
-            let img_lixeira = document.createElement("div");
-            img_lixeira.classList.add("img-lixeira");
-            container_img.appendChild(img_lixeira);
+              let lixeira = document.createElement("div");
+              lixeira.classList.add("lixeira");
+              img_lixeira.appendChild(lixeira);
 
-            let lixeira = document.createElement("div");
-            lixeira.classList.add("lixeira");
-            img_lixeira.appendChild(lixeira);
+              let srcLixeira = document.createElement("img");
+              srcLixeira.setAttribute("src", "../img/ico_lixeira.png");
+              lixeira.appendChild(srcLixeira);
 
-            let srcLixeira = document.createElement("img");
-            srcLixeira.setAttribute("src", "../img/ico_lixeira.png");
-            lixeira.appendChild(srcLixeira);
-
+              return {
+                img_lixeira,
+                container_img,
+                cotaAltura,
+                cotaLargura,
+                srcLixeira,
+              };
+            }
             if (arquivo.type === "application/pdf") {
-              const canvas = document.createElement("canvas");
-              const context = canvas.getContext("2d");
-              canvas.classList.add("arquivo_layout");
-              img_lixeira.appendChild(canvas);
-
               const pdf = await pdfjsLib.getDocument(arquivoURL).promise;
-              const page = await pdf.getPage(1); //renderiza a primeira pagina do PDF
-              const viewport = page.getViewport({ scale: 1 });
+              const numPagTotal = pdf.numPages;
 
-              canvas.width = viewport.width;
-              canvas.height = viewport.height;
+              for (let i = 1; i <= numPagTotal; i++) {
+                const {
+                  img_lixeira,
+                  container_img,
+                  cotaAltura,
+                  cotaLargura,
+                  srcLixeira,
+                } = criarEstrutura();
 
-              page
-                .render({ canvasContext: context, viewport })
-                .promise.then(() => {
-                  console.log("PDF renderizado");
+                const canvas = document.createElement("canvas");
+                const context = canvas.getContext("2d");
+                canvas.classList.add("arquivo_layout");
+                img_lixeira.appendChild(canvas);
+
+                const page = await pdf.getPage(i); //renderiza a primeira pagina do PDF
+                const viewport = page.getViewport({ scale: 1 });
+
+                canvas.width = viewport.width;
+                canvas.height = viewport.height;
+
+                await page
+                  .render({ canvasContext: context, viewport })
+                  .promise.then(() => {
+                    console.log(`Pagina ${i} de ${numPagTotal} renderizada`);
+                  });
+
+                gerarCotas(
+                  canvas.width,
+                  canvas.height,
+                  cotaAltura,
+                  cotaLargura
+                );
+                // Adicionando funcionalidade para excluir a ramificação
+                srcLixeira.addEventListener("click", () => {
+                  container_img.remove(); // Remove a div pai da lixeira
                 });
-              gerarCotas(canvas.width, canvas.height);
+              }
             } else if (arquivo.type.startsWith("image/")) {
               let arquivo_layout = document.createElement("img");
+              const {
+                img_lixeira,
+                container_img,
+                cotaAltura,
+                cotaLargura,
+                srcLixeira,
+              } = criarEstrutura();
               arquivo_layout.classList.add("arquivo_layout");
               arquivo_layout.src = arquivoURL;
               img_lixeira.appendChild(arquivo_layout);
@@ -195,12 +232,18 @@
               arquivo_layout.onload = () => {
                 gerarCotas(
                   arquivo_layout.naturalWidth,
-                  arquivo_layout.naturalHeight
+                  arquivo_layout.naturalHeight,
+                  cotaAltura,
+                  cotaLargura
                 );
+                // Adicionando funcionalidade para excluir a ramificação
+                srcLixeira.addEventListener("click", () => {
+                  container_img.remove(); // Remove a div pai da lixeira
+                });
               };
             }
 
-            function gerarCotas(largura, altura) {
+            function gerarCotas(largura, altura, cotaAltura, cotaLargura) {
               const PPI = 100; //Pixel por polegada (padrão por tela)
               const polegadasParaMM = 35.278; //1 polegada = 2,54cm
 
@@ -210,13 +253,7 @@
               cotaAltura.innerText = alturaMM.toFixed(2) + "mm"; //toFixed(n) define a quantidade de casas decimais
               cotaLargura.innerText = larguraMM.toFixed(2) + "mm"; //toFixed(n) define a quantidade de casas decimais
 
-              console.log(`largura: ${larguraMM}
-                altura: ${alturaMM}`);
-
-              // Adicionando funcionalidade para excluir a ramificação
-              srcLixeira.addEventListener("click", () => {
-                container_img.remove(); // Remove a div pai da lixeira
-              });
+              console.log(`largura: ${larguraMM}mm \naltura: ${alturaMM}mm`);
             }
           }
         }
