--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
       <div class="logo"></div>
 
-      <div class="layout_area_2" id="pdf-container"></div>
+      <div class="layout_area_2" id="corpoLayout"></div>
 
       <div class="layout_area_3"></div>
 
@@ -137,7 +137,7 @@
         </select>
       </div>
 
-      <div class="nome_caminho">
+      <div id="nome_caminho">
         <label for="input_nome_caminho">Local do Arquivo: </label>
         <input type="text" name="input_nome_caminho" placeholder="----------" />
       </div>
@@ -147,5 +147,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
     <script src="./src/script.js"></script>
+    <script src="./src/inserirArquivos.js"></script>
   </body>
 </html>
